[package]
name = "vnc-proxy"
version = "1.0.0"
authors = ["whitequark <whitequark@whitequark.org>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/whitequark/rust-vnc"
homepage = "https://github.com/whitequark/rust-vnc"
description = "A VNC proxy"
edition = "2018"

[[bin]]
name = "rvncproxy"
path = "main.rs"

[dependencies]
